fix: handle rewriting old legacy bbcodes